# gap_measurement_mockup

./: .env  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  app.yaml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: health.py  measure.py
backend/app/core/: config.py  logging.py
backend/app/core/assets/: board_layout.json
backend/app/schemas/: measure.py
backend/app/services/: annotate.py  aruco_detect.py  gap_detection.py  homography.py  image_io.py  measurement.py
backend/gapmeasure_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_homography.py  test_measurement.py
frontend/: .dockerignore  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/auth/: RequireAuth.tsx
frontend/src/components/camera/: CameraCapture.tsx  CameraSwitcher.tsx  FileFallbackInput.tsx
frontend/src/components/common/: AppHeader.tsx  Stepper.tsx
frontend/src/components/flows/: StepsGapsFlow.tsx
frontend/src/components/image/: ImageConfirm.tsx  OverlayPreview.tsx  PointPicker.tsx  ZoomPanCanvas.tsx
frontend/src/components/results/: AnnotatedImage.tsx  ResultsCard.tsx
frontend/src/components/shell/: AppShell.tsx  TopAppBar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Collapse.tsx  Field.tsx  Input.tsx  Select.tsx  Tile.tsx  (+2 more)
shared/api-contract/examples/: measure.request.json  measure.response.json
(+16 files in other folders)
